Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115703

QtWebEngine 6.6.0 crashes on Windows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.6.0
    • WebEngine
    • None
    • Windows
    • cfa9a71a9 (112-based), c4e1822f4 (dev), a7544f5ae (6.6), cd477271f (134-based-refactor)

      QtWebEngine is always crashing for me with the Qt 6.6.0 beta2 on Windows 10, in both my own application and the simplebrowser example included with QtCreator.

      QWebEngineView::renderProcessTerminated is called with status QWebEnginePage::CrashedTerminationStatus and exitCode -2147483645

      Qt 6.5.0 and 5.15.2 work OK. --disable-gpu doesn't help. Doesn't matter what page is loaded.

      Any more info I can provide?

        For Gerrit Dashboard: QTBUG-115703
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            srcejon Jon Beniston
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes