Fix for QtWebEngine crash on Windows

- 112-based chromium code enforces that validating command decoder is not used on
platforms where passthrough is fully launched. Refer https://chromium-review.googlesource.com/c/chromium/src/+/4212134
for more details.
- Allowed use of command decoder on Windows to avoid crash.

Task-number: QTBUG-115703
Change-Id: I0382bd9f95299bdd429fda42271c0951b8354bbe
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/499165
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>