chromium/gpu/command_buffer/service/gles2_cmd_decoder.cc
@@ -2979,8 +2979,10 @@ GLES2Decoder* GLES2Decoder::Create(
                                            outputter, group);
   }
 
+// Fix for Qt WebEngine Crash when QSG_RHI_BACKEND=opengl
 // Allow linux to run fuzzers.
-#if BUILDFLAG(ENABLE_VALIDATING_COMMAND_DECODER) || BUILDFLAG(IS_LINUX)
+#if BUILDFLAG(ENABLE_VALIDATING_COMMAND_DECODER) || BUILDFLAG(IS_LINUX) || \
+    BUILDFLAG(IS_WIN)
   return new GLES2DecoderImpl(client, command_buffer_service, outputter, group);
 #else
   LOG(FATAL) << "Validating command decoder is not supported.";
